Update to waterlot remediation project page

--- a/env/projects-projets-eng.html
+++ b/env/projects-projets-eng.html
@@ -6,14 +6,14 @@
 <!-- HEADER BEGINS | DEBUT DE L'EN-TETE -->
 <!-- TITLE BEGINS | DEBUT DU TITRE -->
 
-<title>EGD: Capital Projects</title>
+<title>Esquimalt Graving Dock Waterlot - Sediment Remediation Project - EGD - PWGSC</title>
 <!-- TITLE ENDS | FIN DU TITRE -->
 <!-- METADATA BEGINS | DEBUT DES METADONNEES -->
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <link rel="schema.dc" href="http://purl.org/dc/elements/1.1/" />
 <link rel="schema.dc" href="http://purl.org/dc/terms/" />
 
-<meta name="dc.title" content="Leading the Way with ISO 14001 - EGD - PWGSC" />
+<meta name="dc.title" content="Waterlot Sediment Remediation Project - EGD - PWGSC" />
 <meta name="dc.subject" scheme="gccore" content="Ships; Wharfs; Environment; Information;  Indexes" />
 
 <meta name="dc.language" scheme="ISO639-2/T" content="eng" />
@@ -72,7 +72,7 @@
 		<!-- BREAD CRUMB BEGINS | DEBUT DE LA PISTE DE NAVIGATION -->
 		<p class="breadcrumb">
 			<!--#include virtual="/clf20/ssi/bread-pain-eng.html"--><!--#include virtual="/pac/cse-egd/ssi/bread-pain-eng.html"-->
-					&gt; <acronym title="Esquimalt Graving Dock">EGD</acronym>: Capital Projects</p>
+					&gt; Waterlot Sediment Remediation Project</p>
 		<!-- BREAD CRUMBS END | FIN DE LA PISTE DE NAVIGATION -->
 		<div class="colLayout">
 			<!-- TWO COLUMN LAYOUT BEGINS | DEBUT DE LA MISE EN PAGE DE DEUX COLONNES -->
@@ -89,21 +89,60 @@
 
 				<h1 id="cont">
 					<!-- CONTENT TITLE BEGINS | DEBUT DU TITRE DU CONTENU -->
-					<acronym title="Esquimalt Graving Dock">EGD</acronym>: Capital Projects 
+					Esquimalt Graving Dock Waterlot - Sediment Remediation Project
 					<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
 				</h1>
 
+        <h2>Background</h2>
+
         <p>
-          The Esquimalt Graving Dock (EGD) has a number of exciting changes both in the planning and the developmental stages.  The primary project will be the installation of a new 30&nbsp;tonne double boom level luffing crane that will be erected on the south side of the basin dock.  Preporation for the erection of the new crane is scheduled to commence in April,&nbsp;2010. The approximate date that the new 30&nbsp;tonne crane will be in service is the end of July,&nbsp;2010.  Following the erection and commissioning of the new crane on the south side of the basin dock work will then commence immediately on dismantling our existing 30&nbsp;tonne crane for refurbishment and modernization of its motors and drives.  The existing 30&nbsp;tonne crane will be disassembled piece by piece and placed in dock bottom in Section&nbsp;#&nbsp;3. There it will be inspected completely and repaired, where required, then reassembled on the north side of the basin dock on the tracks of our current 44&nbsp;tonne hammerhead crane.  This work is scheduled to begin immediately following the commissioning of the new crane approximatley the end of July,&nbsp;2010.  The contractor for this project will utilize space in dock bottom in Section&nbsp;#&nbsp;3 as well as the areas adjacent to Section&nbsp;#&nbsp;3 top side for their work area on this crane.  The refurbishment and modernization of the <acronym title="Esquimalt Graving Dock">EGD</acronym>'s current 30&nbsp;tonne crane will run from July,&nbsp;2010 through to approximately November,&nbsp;2010.  Once our existing 30&nbsp;tonne crane is assembled and is back in service on the north side of the basin dock work will then commence on the removal of our 44&nbsp;tonne hammerhead crane from the north side of the basin dock.  
+As part of the Federal Contaminated Sites Action Plan (FCSAP), Public Works and Government Services Canada (PWGSC) is remediating (cleaning-up) the contaminated sediments in the waterlot of the Esquimalt Graving Dock (EGD) to ensure the <acronym title="Esquimalt Graving Dock">EGD</acronym> meets federal and provincial environmental standards.  The successful completion of this work will improve the marine habitat in Esquimalt Harbour.
+</p>
+
+<p>
+The <acronym title="Esquimalt Graving Dock">EGD</acronym> is located on the north shore of Constance Cove in Esquimalt Harbour, at 825 Admirals Road in the Township of Esquimalt, BC.  <acronym title="Public Works and Government Services Canada">PWGSC</acronym> is the federal custodian and operates and maintains the facility. The <acronym title="Esquimalt Graving Dock">EGD</acronym>  has been used for the repair and maintenance of military and civilian vessels since 1927, and this long history of industrial use has contributed to sediment contamination in the seabed around the facility.  The primary contaminants of concern include metals (e,g. arsenic, copper, lead, and zinc), polychlorinated biphenyls (PCBs), and polycyclic aromatic hydrocarbons (PAHs). 
+        </p>
+
+        <img src="../images/da.jpg" alt="" width="100%" />
+
+        <h2>Project</h2>
+
+        <p>
+          The project involves three phases: constructing an erosion protection sheet pile wall around the south jetty, which was completed in April 2013; dredging the contaminated sediment from the waterlot and disposal off-site at a permitted landfill, which will begin in June 2013; and creating new intertidal marsh fish habitat in Esquimalt Harbour, which is planned to begin in July 2013. 
+          </p>
+
+          <p>
+The dredging phase of the project involves the removal of approximately 150,000 cubic metres of contaminated sediment from the <acronym title="Esquimalt Graving Dock">EGD</acronym> waterlot.  This contract was awarded to Tervita Corporation in January 2013.  
+</p>
+
+<p>
+Dredged material will be transported from the <acronym title="Esquimalt Graving Dock">EGD</acronym> on barges to an off-load facility. Tervita plans to deliver the material to a private facility located in Victoria Harbour adjacent to David Street.  The contaminated sediment will be loaded directly into trucks and taken to the Tervita Highwest Landfill located in the District of Highlands, BC.
+</p>
+
+<p> 
+An environmental monitoring program will help verify that the safeguards included in the project are protecting the environment during and after the clean up.
+
+        </p>
+
+        <h2>How Will This Project Affect You?</h2>
+
+        <p>
+        Dredging activities are planned to take place June 2013 - March 2014, six days a week (Monday through Saturday). Potential noise effects on the adjacent neighbourhood will be taken into consideration.  The work hours will be similar to those of normal operations at the <acronym title="Esquimalt Graving Dock">EGD</acronym>, and noise levels will be monitored to follow the Township of Esquimalt’s noise bylaw. 
         </p>
 
         <p>
-          In addition to the above projects the Esquimalt Graving Dock is seeking funding for a 100&nbsp;foot extension of the basin dock east from the east wall of Section&nbsp;#&nbsp;3.  The answer to our funding request for this work will be known some time in February,&nbsp;2010.  The 100&nbsp;foot extension will facilitate extended docking periods for the <acronym title="Department of National Defense">DND</acronym> frigate mid life refit project, as well as allow the docking of a number of the larger vessels from the <acronym title="British Columbia">BC</acronym> Ferries fleet in only one section. This will leave approximately 750&nbsp;feet of dry dock for other refit and repair work. We understand that the complete closure of Section&nbsp;#&nbsp;3 will be an inconvenience for all from approximately May,&nbsp;2010 through to the end of March,&nbsp;2011 but we think that all would agree that this relatively short term inconvenience, approximately 10&nbsp;months, will benefit all for the long term with additional dry docking space.
+Additional vessel traffic is expected, including barges, which will be coordinated with the Department of National Defence and the Queen's Harbour Master to minimize inconvenience to boaters in Esquimalt Harbour.
+</p>
+
+<p>
+Increased truck traffic through the community may be encountered in Victoria, Langford and the Highlands; truck routing will be planned to minimize impacts on traffic flow. 
         </p>
 
-        <p>
-        If anyone has any questions on any of the above or would like further information please do not hesitate to contact <a href="mailto:david.latoski@pwgsc-tpsgc.gc.ca">David Latoski</a>, Operations Manager, Esquimalt Graving Dock at 250-363-8056.  
-        </p>
+        <img src="../images/tl.jpg" alt="" width="100%" />
+
+        <h2>Contact Information</h2>
+
+        <p>For more information on this project, please contact the EGD Hotline at (250) 363-0227. </p>
 			</div>
 
 			<!-- CONTENT ENDS | FIN DU CONTENU -->
