--- a/env/projects-projets-fra.html
+++ b/env/projects-projets-fra.html
@@ -6,7 +6,7 @@
 <!-- DEBUT DE L'EN-TETE | HEADER BEGINS -->
 <!-- DEBUT DU TITRE | TITLE BEGINS -->
 
-<title>CSE: tarifs</title>
+<title>Plan d'eau de la cale s&egrave;che d'Esquimalt - Projet d'assainissement des s&eacute;diments - CSE - TPSGC</title>
 
 <!-- FIN DU TITRE | TITLE ENDS -->
 <!-- DEBUT DES METADONNEES | METADATA BEGINS -->
@@ -14,7 +14,7 @@
 <link rel="schema.dc" href="http://purl.org/dc/elements/1.1/" />
 <link rel="schema.dc" href="http://purl.org/dc/terms/" />
 
-<meta name="dc.title" content="CSE: tarifs" />
+<meta name="dc.title" content="Plan d'eau de la cale sèche d'Esquimalt - Projet d'assainissement des sédiments - CSE - TPSGC" />
 <meta name="dc.subject" scheme="gccore" content="Navire; Quai; Environnement; Information;  Index" />
 
 <meta name="dc.language" scheme="ISO639-2/T" content="fra" />
@@ -86,20 +86,51 @@
 
 				<h1 id="cont">
 					<!-- CONTENT TITLE BEGINS | DEBUT DU TITRE DU CONTENU -->
-					<acronym title="cale s&egrave;che d'Esquimalt">CSE</acronym>&nbsp;: Projets d'immobilisations
+					Plan d'eau de la cale s&egrave;che d'Esquimalt - Projet d'assainissement des s&eacute;diments
 					<!-- CONTENT TITLE ENDS | FIN DU TITRE DU CONTENU -->
 				</h1>
 
-        <p>
-          La cale s&egrave;che d'Esquimalt (CSE) compte un certain nombre de changements prometteurs, tant &agrave; l&iquest;&eacute;tape de planification qu&iquest;&agrave; l&iquest;&eacute;tape exp&eacute;rimentale. Le projet principal sera l&iquest;installation d&iquest;une nouvelle grue &agrave; port&eacute;e variable &agrave; deux fl&egrave;ches de 30&nbsp;tonnes qui sera &eacute;rig&eacute;e du c&ocirc;t&eacute; sud du quai de bassin. La pr&eacute;paration pour l&iquest;&eacute;rection de la nouvelle grue doit commencer en avril&nbsp;2010. La date approximative d&iquest;entr&eacute;e en service de cette nouvelle grue de 30&nbsp;tonnes est la fin juillet&nbsp;2010. Apr&egrave;s l&iquest;&eacute;rection et la mise en service de la nouvelle grue du c&ocirc;t&eacute; sur du quai du bassin les travaux commenceront imm&eacute;diatement pour le d&eacute;mant&egrave;lement de la grue de 30&nbsp;tonnes existante pour la remise &agrave; neuf et la modernisation de ses moteurs et entra&icirc;nements. La grue de 30&nbsp;tonnes existante sera d&eacute;mont&eacute;e pi&egrave;ce par pi&egrave;ce dans le fond de la cale s&egrave;che de la section&nbsp;no&nbsp;3. Elle y sera enti&egrave;rement inspect&eacute;e et r&eacute;par&eacute;e, au besoin, puis remont&eacute;e du c&ocirc;t&eacute; nord du quai de bassin sur les chenilles de notre grue-marteau existante de 44&nbsp;tonnes. Ces travaux doivent commencer imm&eacute;diatement apr&egrave;s la mise en service de la nouvelle grue vers la fin juillet&nbsp;2010. L&iquest;entrepreneur du pr&eacute;sent projet doit utiliser l&iquest;espace dans le fond de la cale s&egrave;che de la section no&nbsp;3 en plus des zones adjacentes au c&ocirc;t&eacute; sup&eacute;rieur de la section no&nbsp;3 pour ses travaux sur cette grue. La remise &agrave; neuf et la modernisation de la grue existante de 30&nbsp;tonnes de la cale s&egrave;che d'Esquimalt s&iquest;effectuera de juillet&nbsp;2010 jusqu&iquest;environ novembre&nbsp;2010. Lorsque notre grue existante de 30&nbsp;tonnes sera assembl&eacute;e et remise en service du c&ocirc;t&eacute; nord du quai de bassin, les travaux commenceront alors pour l&iquest;enl&egrave;vement de notre grue-marteau existante de 44&nbsp;tonnes du c&ocirc;t&eacute; nord du quai de bassin.
-        </p>
+        <h2>Contexte</h2>
 
         <p>
-          En plus des projets susmentionn&eacute;s, la cale s&egrave;che d'Esquimalt est &agrave; la recherche de financement en vue d&iquest;une rallonge de 100&nbsp;pieds au quai de bassin vers l&iquest;est &agrave; partir du mur est de la section&nbsp;no&nbsp;3. La r&eacute;ponse &agrave; notre demande de financement en vue de ces travaux sera connue en f&eacute;vrier&nbsp;2010. La rallonge de 100&nbsp;pieds facilitera les p&eacute;riodes prolong&eacute;es d&iquest;amarrage dans le cadre du projet de prolongation de la dur&eacute;e de vie des fr&eacute;gates du <acronym title="Minist&egrave;re de la D&eacute;fense Nationale">MDN</acronym>, en plus de permettre l&iquest;amarrage d&iquest;un certain nombre de gros navires de la flotte de traversiers <acronym title="Colombie-Britannique">BC</acronym> Ferries dans une seule section. Il restera ainsi environ 750&nbsp;pieds de cale s&egrave;ches pour les autres travaux de remise &agrave; neuf et de r&eacute;paration. Nous comprenons que la fermeture compl&egrave;te de la section&nbsp;no&nbsp;3 posera des inconv&eacute;nients pour tous d&iquest;environ mai&nbsp;2010 jusqu&iquest;&agrave; la fin mars&nbsp;2011 mais nous croyons que tous s&iquest;accorderont sur le fait que ces inconv&eacute;nients &agrave; court terme (environ 10&nbsp;mois) seront &agrave; l&iquest;avantage de tous &agrave; long terme en ajoutant des espaces en cale s&egrave;che.
+          Dans le cadre du Plan d'action pour les sites contamin&eacute;s f&eacute;d&eacute;raux, Travaux publics et Services gouvernementaux Canada (TPSGC) assainit (nettoie) les s&eacute;diments contamin&eacute;s qui se trouvent dans le plan d'eau de la cale s&egrave;che d'Esquimalt (CSE) pour faire en sorte que la <acronym title="cale s&egrave;che d'Esquimalt">CSE</acronym> r&eacute;ponde aux normes environnementales provinciales et f&eacute;d&eacute;rales. L'ex&eacute;cution de ces travaux permettra d'am&eacute;liorer l'habitat marin du port d'Esquimalt.
+          </p>
+
+          <p>
+La <acronym title="cale s&egrave;che d'Esquimalt">CSE</acronym> est situ&eacute;e sur la rive nord de l'anse Constance dans le port d'Esquimalt, au 825 Admirals Road dans le canton d'Esquimalt, en Colombie-Britannique. <acronym title='Travaux publics et Services gouvernementaux Canada'>TPSGC</acronym> en est le gardien f&eacute;d&eacute;ral et veille &agrave; l'exploitation ainsi qu'&agrave; l'entretien de ses installations. La <acronym title="cale s&egrave;che d'Esquimalt">CSE</acronym> est utilis&eacute;e pour la r&eacute;paration et l'entretien des navires militaires et civils depuis 1927. Ces longs ant&eacute;c&eacute;dents d'utilisation industrielle ont contribu&eacute; &agrave; la contamination des s&eacute;diments se trouvant sur le plancher oc&eacute;anique entourant l'installation. Les principaux contaminants pr&eacute;occupants incluent les m&eacute;taux (arsenic, cuivre, plomb et zinc), le diph&eacute;nyle polychlor&eacute; (BPC) et les hydrocarbures aromatiques polycycliques (HAP). 
+
         </p>
 
+        <img src="../images/da.jpg" alt="" width="100%" />
+
+        <h2>Projet</h2>
+
         <p>
-        Si vous avez des questions portant sur ce qui pr&eacute;c&egrave;de ou si vous d&eacute;sirez davantage d&iquest;information n'h&eacute;sitez pas &agrave; communiquer avec <a href="mailto:david.latoski@pwgsc-tpsgc.gc.ca">david.latoski@pwgsc-tpsgc.gc.ca</a>, gestionnaire de l&iquest;exploitation, cale s&egrave;che d'Esquimalt, au&nbsp;250-363-8056.
+          Le projet comprend trois &eacute;tapes : la construction d'un rideau de palplanches pour la protection contre l'&eacute;rosion autour de la jet&eacute;e sud, termin&eacute;e en avril 2013; le dragage des s&eacute;diments contamin&eacute;s du plan d'eau et l'&eacute;limination de ceux-ci dans des sites d'enfouissement homologu&eacute;s, ce qui commencera en juin 2013; et la cr&eacute;ation d'un nouvel habitat de marais intertidal pour les poissons dans le port d'Esquimalt, pr&eacute;vue pour juillet 2013. 
+          </p>
+
+          <p>
+
+L'&eacute;tape de dragage vise l'extraction d'environ 150 000 m&egrave;tres cubes de s&eacute;diments contamin&eacute;s du plan d'eau de la <acronym title="cale s&egrave;che d'Esquimalt">CSE</acronym>. Ce march&eacute; a &eacute;t&eacute; octroy&eacute; &agrave; Tervita Corporation en janvier 2013. 
+</p>
+
+<p>
+Les mat&eacute;riaux extraits seront transport&eacute;s dans des barges, de la <acronym title="cale s&egrave;che d'Esquimalt">CSE</acronym> &agrave; une installation de d&eacute;chargement. Tervita pr&eacute;voit livrer les mat&eacute;riaux &agrave; une installation priv&eacute;e situ&eacute;e au port de Victoria, &agrave; c&ocirc;t&eacute; de la rue David. Les s&eacute;diments contamin&eacute;s seront charg&eacute;s directement dans des camions et transport&eacute;s jusqu'au site d'enfouissement Highwest de Tervita dans le district des Hautes-Terres, en Colombie-Britannique.
+</p>
+
+<p> 
+Un programme de surveillance environnementale v&eacute;rifiera l'efficacit&eacute; des mesures de protection du projet, pendant et apr&egrave;s l'assainissement.
+
+        </p>
+
+        <img src="../images/tl.jpg" alt="" width="100%" />
+
+        <h2>R&eacute;percussions du projet</h2>
+
+        <h2>Renseignements</h2>
+
+        <p>
+        Pour en savoir plus sur le projet, communiquez avec la ligne prioritaire de la <acronym title="cale s&egrave;che d'Esquimalt">CSE</acronym> au 250-363-0227.
         </p>
 			</div>
 
