--- a/ssi/right-menu-droite-eng.html
+++ b/ssi/right-menu-droite-eng.html
@@ -13,13 +13,13 @@
     <h2>What's New</h2>
     <ul>
       <li>
-        <a title="EGD: Electrical Lockout Policy" href="http://www.tpsgc-pwgsc.gc.ca/pac/cse-egd/avis-notices-eng.html">New Electrical Lockout, Policy, Procedures &amp; Records</a>
+        <a href="env/projects-projets-eng.html">Esquimalt Graving Dock Waterlot - Sediment Remediation Project</a>
       </li>
       <li>
-        <a title="EGD: Capital Projects" href="http://www.tpsgc-pwgsc.gc.ca/pac/cse-egd/env/projects-projets-eng.html">Upcoming capital projects impacting operations for the Esquimalt Graving Dock</a>
+        <a href="avis-notices-eng.html">New Electrical Lockout, Policy, Procedures &amp; Records</a>
       </li>
       <li>
-        <a title="EGD Regulations" href="http://gazette.gc.ca/rp-pr/p2/2009/2009-12-23/html/sor-dors324-eng.html">Regulations amending the Esquimalt Graving Dock regulations.</a>
+        <a href="http://gazette.gc.ca/rp-pr/p2/2009/2009-12-23/html/sor-dors324-eng.html">Regulations amending the Esquimalt Graving Dock regulations.</a>
       </li>
     </ul>
   </li>
