--- a/env/projects-projets-fra.html
+++ b/env/projects-projets-fra.html
@@ -69,7 +69,7 @@
 		<!-- DEBUT DE LA PISTE DE NAVIGATION | BREAD CRUMB BEGINS -->
 		<p class="breadcrumb">
 			<!--#include virtual="/clf20/ssi/bread-pain-fra.html"--><!--#include virtual="/pac/cse-egd/ssi/bread-pain-fra.html"-->
-			&gt; <acronym title="cale s&egrave;che d'Esquimalt">CSE</acronym>&nbsp;: tarifs</p>
+			&gt; Plan d'eau de la cale s&egrave;che d'Esquimalt - Projet d'assainissement des s&eacute;diments</p>
 		<!-- BREAD CRUMBS END | FIN DE LA PISTE DE NAVIGATION -->
 		<div class="colLayout">
 			<!-- DEBUT DE LA MISE EN PAGE DE DEUX COLONNES | TWO COLUMN LAYOUT BEGINS -->
