Update waterlot project copy

--- a/env/projects-projets-eng.html
+++ b/env/projects-projets-eng.html
@@ -100,7 +100,12 @@ As part of the Federal Contaminated Sites Action Plan (FCSAP), Public Works and 
 </p>
 
 <p>
-The <acronym title="Esquimalt Graving Dock">EGD</acronym> is located on the north shore of Constance Cove in Esquimalt Harbour, at 825 Admirals Road in the Township of Esquimalt, BC.  <acronym title="Public Works and Government Services Canada">PWGSC</acronym> is the federal custodian and operates and maintains the facility. The <acronym title="Esquimalt Graving Dock">EGD</acronym>  has been used for the repair and maintenance of military and civilian vessels since 1927, and this long history of industrial use has contributed to sediment contamination in the seabed around the facility.  The primary contaminants of concern include metals (e,g. arsenic, copper, lead, and zinc), polychlorinated biphenyls (PCBs), and polycyclic aromatic hydrocarbons (PAHs). 
+The <acronym title="Esquimalt Graving Dock">EGD</acronym> is located on the north shore of Constance Cove in Esquimalt Harbour, at 825 Admirals Road in the Township of Esquimalt, BC.  <acronym title="Public Works and Government Services Canada">PWGSC</acronym> is the federal custodian and operates and maintains the facility. The <acronym title="Esquimalt Graving Dock">EGD</acronym>  has been used for the repair and maintenance of military and civilian vessels since 1927, and this long history of industrial use has contributed to sediment contamination in the seabed around the facility.  The primary contaminants of concern identified from detailed site investigations include metals (e.g. arsenic, copper, lead, and zinc), polychlorinated biphenyls (PCBs), and polycyclic aromatic hydrocarbons (PAHs).  Sodium and chloride ions (salt) from seawater, and other contaminants in lesser amounts, are also present.  Based on the concentrations of the contaminants the classification for disposal purposes is waste quality IL+ soil (concentrations are greater than the BC Contaminated Sites Regulation Industrial Land Use standards); however approximately half of the material would be acceptable for use on industrial lands if the salt was not present.  No Hazardous Waste level concentrations were identified.  The sediments are acceptable for disposal at a facility permitted to accept waste quality soils.
+</p>
+
+<p>
+For further information please see the PWGSC Esquimalt Graving Dock Detailed Site Investigation report (Golder Associates, June 7, 2013) in the Juan de Fuca Public Library.
+
         </p>
 
         <img src="../images/da.jpg" alt="" width="100%" />
@@ -143,6 +148,15 @@ Increased truck traffic through the community may be encountered in Victoria, La
         <h2>Contact Information</h2>
 
         <p>For more information on this project, please contact the EGD Hotline at (250) 363-0227. </p>
+
+        <h2>Current Work</h2>
+
+        <ul>
+          <li>As of June 14, 2013, the planned work anticipates dredging at the Esquimalt Graving Dock starting on June 17, 2013. </li>
+          <li> The contractor plans to use a marine clamshell dredge derrick to excavate the sediments, and then place them in water tight material barges. Once each material barge is full, it will be towed to an on-site Water Treatment Barge for dewatering of the sediment. </li>
+          <li>Following sediment dewatering, it is then planned that he material barges will be towed to Victoria Harbour to a private off-loading facility located adjacent to David Street. The current schedule anticipates the first barge arriving at the off-loading facility on June 18, 2013. </li>
+          <li>It is planned that the material barges will be unloaded using an excavator, and the sediments (now considered soil) placed into sealed trucks for transport to the Tervita Highwest Landfill facility located in the District of Highlands, BC. Trucking is anticipated to start on June 18, 2013.</li>
+        </ul>
 			</div>
 
 			<!-- CONTENT ENDS | FIN DU CONTENU -->
