--- a/env/projects-projets-fra.html
+++ b/env/projects-projets-fra.html
@@ -97,9 +97,13 @@
           </p>
 
           <p>
-La <acronym title="cale s&egrave;che d'Esquimalt">CSE</acronym> est situ&eacute;e sur la rive nord de l'anse Constance dans le port d'Esquimalt, au 825 Admirals Road dans le canton d'Esquimalt, en Colombie-Britannique. <acronym title='Travaux publics et Services gouvernementaux Canada'>TPSGC</acronym> en est le gardien f&eacute;d&eacute;ral et veille &agrave; l'exploitation ainsi qu'&agrave; l'entretien de ses installations. La <acronym title="cale s&egrave;che d'Esquimalt">CSE</acronym> est utilis&eacute;e pour la r&eacute;paration et l'entretien des navires militaires et civils depuis 1927. Ces longs ant&eacute;c&eacute;dents d'utilisation industrielle ont contribu&eacute; &agrave; la contamination des s&eacute;diments se trouvant sur le plancher oc&eacute;anique entourant l'installation. Les principaux contaminants pr&eacute;occupants incluent les m&eacute;taux (arsenic, cuivre, plomb et zinc), le diph&eacute;nyle polychlor&eacute; (BPC) et les hydrocarbures aromatiques polycycliques (HAP). 
+La <acronym title="cale s&egrave;che d'Esquimalt">CSE</acronym> est situ&eacute;e sur la rive nord de l'anse Constance dans le port d'Esquimalt, au 825 Admirals Road dans le canton d'Esquimalt, en Colombie-Britannique. <acronym title='Travaux publics et Services gouvernementaux Canada'>TPSGC</acronym> en est le gardien f&eacute;d&eacute;ral et veille &agrave; l'exploitation ainsi qu'&agrave; l'entretien de ses installations. La <acronym title="cale s&egrave;che d'Esquimalt">CSE</acronym> est utilis&eacute;e pour la r&eacute;paration et l'entretien des navires militaires et civils depuis 1927. Ces longs ant&eacute;c&eacute;dents d'utilisation industrielle ont contribu&eacute; &agrave; la contamination des s&eacute;diments se trouvant sur le plancher oc&eacute;anique entourant l'installation. Les principaux contaminants pr&eacute;occupants d&eacute;termin&eacute;s au moyen des &eacute;tudes d&eacute;taill&eacute;es du site comprennent des m&eacute;taux (p. ex. arsenic, cuivre, plomb et zinc), des diph&eacute;nyles polychlor&eacute;s (BPC) et des hydrocarbures aromatiques polycycliques (HAP). Il y a &eacute;galement des ions sodium et des ions chlorure (sel) provenant de l’eau de mer ainsi que des quantit&eacute;s moindres d’autres contaminants. Compte tenu des concentrations des contaminants, la classification des d&eacute;chets aux fins d’&eacute;limination est celle de « terres industrielles+ » (concentrations sup&eacute;rieures aux normes d’utilisation des terres industrielles de la Contaminated Sites Regulation de la Colombie-Britannique). Cependant, environ la moiti&eacute; des mat&eacute;riaux pourraient &ecirc;tre utilis&eacute;s sur des terres industrielles s’il n’y avait pas de sel. Aucune concentration de d&eacute;chets dangereux n’a &eacute;t&eacute; d&eacute;tect&eacute;e. Les s&eacute;diments peuvent &ecirc;tre &eacute;limin&eacute;s &agrave; une installation autoris&eacute;e &agrave; accepter les sols consid&eacute;r&eacute;s comme des d&eacute;chets.
+</p>
 
-        </p>
+<p>
+Pour obtenir de plus amples renseignements, veuillez consulter le rapport d’&eacute;tude d&eacute;taill&eacute;e du site de la cale s&egrave;che d’Esquimalt de TPSGC (Golder Associates, 7 juin 2013) &agrave; la biblioth&egrave;que municipale Juan de Fuca.
+
+</p>
 
         <img src="../images/da.jpg" alt="" width="100%" />
 
@@ -144,6 +148,15 @@ Il pourrait y avoir une circulation accrue de camions &agrave; Victoria, Langfor
         <p>
         Pour en savoir plus sur le projet, communiquez avec la ligne prioritaire de la <acronym title="cale s&egrave;che d'Esquimalt">CSE</acronym> au 250-363-0227.
         </p>
+
+        <h2>Travaux actuels :</h2>
+
+        <ul>
+          <li>En date du 14 juin 2013, on pr&eacute;voit du dragage &agrave; la cale s&egrave;che d’Esquimalt &agrave; partir du 17 juin 2013 dans le cadre des travaux pr&eacute;vus. </li>
+          <li>L’entrepreneur envisage d’utiliser une drague &agrave; benne preneuse maritime pour proc&eacute;der &agrave; l’excavation des s&eacute;diments, et les placer dans des barges &eacute;tanches &agrave; mat&eacute;riaux. Chaque fois qu’une barge sera pleine, elle sera remorqu&eacute;e jusqu’&agrave; une barge de traitement des eaux sur le site aux fins de d&eacute;shydratation des s&eacute;diments. </li>
+          <li>Apr&egrave;s la d&eacute;shydratation des s&eacute;diments, les barges &agrave; mat&eacute;riaux devraient &ecirc;tre remorqu&eacute;es au port de Victoria, jusqu’&agrave; une installation priv&eacute;e de d&eacute;chargement &agrave; c&ocirc;t&eacute; de la rue David. L’horaire actuel pr&eacute;voit que la premi&egrave;re barge arrivera &agrave; l’installation de d&eacute;chargement le 18 juin 2013. </li>
+          <li>On pr&eacute;voit que les barges &agrave; mat&eacute;riaux seront d&eacute;charg&eacute;es au moyen d’une excavatrice, et que les s&eacute;diments (maintenant consid&eacute;r&eacute;s comme des sols) seront plac&eacute;s dans des camions &eacute;tanches aux fins de transport jusqu’au site d’enfouissement Highwest de Tervita, situ&eacute; dans le district de Highlands, en Colombie-Britannique. Le camionnage devrait d&eacute;buter le 18 juin 2013.</li>
+        </ul>
 			</div>
 
 			<!-- FIN DU CONTENU | CONTENT ENDS -->
