Update waterlot remediation project pages

--- a/ssi/right-menu-droite-eng.html
+++ b/ssi/right-menu-droite-eng.html
@@ -13,7 +13,7 @@
     <h2>What's New</h2>
     <ul>
       <li>
-        <a href="env/projects-projets-eng.html">Esquimalt Graving Dock Waterlot - Sediment Remediation Project</a>
+        <a href="env/projects-projets-eng.html">EGD Waterlot Remediation Project</a>
       </li>
       <li>
         <a href="avis-notices-eng.html">New Electrical Lockout, Policy, Procedures &amp; Records</a>
