Link to chemistry data summary

--- a/env/projects-projets-eng.html
+++ b/env/projects-projets-eng.html
@@ -231,6 +231,12 @@ Increased truck traffic through the community may be encountered in Victoria, La
     The overall magnitude of contamination within the remainder of the Project Area was generally similar to the rest of central Constance Cove (in the range of approximately 2 to 5 times the numeric RAOs). 
     </p>
 
+    <p>
+      <img src="../images/pdf.jpg" alt="" style="width: 16px; height: 16px; float: left" />
+      &nbsp;
+      <a href="chemistry-data-summary-eng.pdf">Chemistry Data Summary</a>
+    </p>
+
     <h3>Summary of Conclusions and Recommendations</h3>
     <p>
     The DSI has provided data on contaminant distribution within the Project Area to support the development of the remedial dredging plan for the EGD Waterlot Remediation Project, which involves full extent practical removal of contaminated sediments exceeding numeric RAOs.  
