Link to chemistry data summary French version

--- a/env/projects-projets-fra.html
+++ b/env/projects-projets-fra.html
@@ -228,6 +228,12 @@ Les zones de concentration les plus &eacute;lev&eacute;es (>10 x OMA) sont g&eac
 Le degr&eacute; g&eacute;n&eacute;ral de contamination dans le reste de la zone vis&eacute;e par le projet est g&eacute;n&eacute;ralement semblable &agrave; ce qu'on observe dans le reste de la partie centrale de la baie Constance (soit une fourchette de 2 &agrave; 5 fois environ les OMA num&eacute;riques). 
 </p>
 
+<p>
+  <img src="../images/pdf.jpg" alt="" style="width: 16px; height: 16px; float: left" />
+  &nbsp;
+  <a href="chemistry-data-summary-fra.pdf">Chimie R&eacute;sum&eacute; des donn&eacute;es</a>
+</p>
+
 <h3>R&eacute;sum&eacute; des conclusions et recommandations</h3>
 <p>
 L' &Eacute;DS a permis de produire des donn&eacute;es sur la distribution des contaminants dans la zone vis&eacute;e par le projet pour appuyer l'&eacute;laboration du plan de dragage correctif pr&eacute;vu par le Plan d'assainissement du plan d'eau de la CSE, qui comporte l'enl&egrave;vement mat&eacute;riel &agrave; grande &eacute;chelle des s&eacute;diments contamin&eacute;s d&eacute;passant les OMA num&eacute;riques. 
