Link to contanimation levels PDF

--- a/env/projects-projets-eng.html
+++ b/env/projects-projets-eng.html
@@ -237,6 +237,12 @@ Increased truck traffic through the community may be encountered in Victoria, La
       <a href="chemistry-data-summary-eng.pdf">Chemistry Data Summary</a>
     </p>
 
+    <p>
+      <img src="../images/pdf.jpg" alt="" style="width: 16px; height: 16px; float: left" />
+      &nbsp;
+      <a href="contamination-eng.pdf">Contamination Level Poster Board</a>
+    </p>
+
     <h3>Summary of Conclusions and Recommendations</h3>
     <p>
     The DSI has provided data on contaminant distribution within the Project Area to support the development of the remedial dredging plan for the EGD Waterlot Remediation Project, which involves full extent practical removal of contaminated sediments exceeding numeric RAOs.  
