--- a/env/projects-projets-fra.html
+++ b/env/projects-projets-fra.html
@@ -234,6 +234,12 @@ Le degr&eacute; g&eacute;n&eacute;ral de contamination dans le reste de la zone 
   <a href="chemistry-data-summary-fra.pdf">Chimie R&eacute;sum&eacute; des donn&eacute;es</a>
 </p>
 
+<p>
+  <img src="../images/pdf.jpg" alt="" style="width: 16px; height: 16px; float: left" />
+  &nbsp;
+  <a href="contamination-fra.pdf">Contamination niveaux panneau d'affichage</a>
+</p>
+
 <h3>R&eacute;sum&eacute; des conclusions et recommandations</h3>
 <p>
 L' &Eacute;DS a permis de produire des donn&eacute;es sur la distribution des contaminants dans la zone vis&eacute;e par le projet pour appuyer l'&eacute;laboration du plan de dragage correctif pr&eacute;vu par le Plan d'assainissement du plan d'eau de la CSE, qui comporte l'enl&egrave;vement mat&eacute;riel &agrave; grande &eacute;chelle des s&eacute;diments contamin&eacute;s d&eacute;passant les OMA num&eacute;riques. 
